# pkg/models/api.go
@@ -1,0 +1,6 @@
+package models
+
+// ErrorResponse represents a generic error response in the API.
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
